--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,10 @@ p {
   color: #666;
   line-height: 1.6;
 }
+
+.divider {
+  background-color: #333;
+  height: 2px;
+  width: 50px;
+  margin: 20px auto;
+}
